# prismalog

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  LICENSE  MAKEFILE  README.md  index.html  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements_optional.txt  setup.py
.github/workflows/: debug.yml  prismalog_ci.yml
benchmark/: README.md  performance_compare.py  performance_test.py  performance_test_mixed.py  performance_test_multiprocessing.py  performance_test_threading.py  standard_logging_benchmark.py
docs/: Makefile
docs/source/: conf.py  examples.rst  index.rst  installation.rst  usage.rst
docs/source/_static/: custum.css
docs/source/_templates/: layout.html
docs/source/api/: argparser.rst  config.rst  index.rst  log.rst
example/: README.md  config.yaml  config_nltk_quiet.yaml  config_nltk_verbose.yaml  config_no_exit.yaml  config_showcase.py  example.py  example_package_level_initialisation.py  example_script.py  log_sequence_test.py  nltk_example.py
example/integrations/nltk_example/: config_nltk_quiet.yaml  config_nltk_verbose.yaml  nltk_example.py  requirements.txt
extracted_metrics/: performance_py3.10.txt  performance_py3.11.txt
htmlcov/: class_index.html  function_index.html  index.html  timestamp.txt  z_7feeea2cb6302655___init___py.html  z_7feeea2cb6302655_config_py.html  z_7feeea2cb6302655_log_py.html
prismalog/: __init__.py  argparser.py  config.py  log.py
reports/html/3.10/: coverage.xml  index.html
reports/html/3.10/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_7feeea2cb6302655___init___py.html  z_7feeea2cb6302655_argparser_py.html  z_7feeea2cb6302655_config_py.html  z_7feeea2cb6302655_log_py.html
reports/html/3.10/junit/: test-results.xml
reports/html/3.10/reports/: benchmark_results.md  performance_py3.10.txt
reports/html/3.10/reports/html/: index.html
reports/html/3.10/reports/pylint/: pylint-py3.10.html  pylint-report-py3.10.txt
reports/html/3.11/: coverage.xml  index.html
reports/html/3.11/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_7feeea2cb6302655___init___py.html  z_7feeea2cb6302655_argparser_py.html  z_7feeea2cb6302655_config_py.html  z_7feeea2cb6302655_log_py.html
reports/html/3.11/junit/: test-results.xml
reports/html/3.11/reports/: performance_py3.11.txt
reports/html/3.11/reports/html/: index.html
reports/html/3.11/reports/pylint/: pylint-py3.11.html  pylint-report-py3.11.txt
reports/html/3.8/: coverage.xml  index.html
reports/html/3.8/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_7feeea2cb6302655___init___py.html  z_7feeea2cb6302655_argparser_py.html  z_7feeea2cb6302655_config_py.html  z_7feeea2cb6302655_log_py.html
reports/html/3.8/junit/: test-results.xml
reports/html/3.8/reports/: performance_py3.8.txt
reports/html/3.8/reports/html/: index.html
reports/html/3.8/reports/pylint/: pylint-py3.8.html  pylint-report-py3.8.txt
temp/: coverage.xml
temp/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_7feeea2cb6302655___init___py.html  z_7feeea2cb6302655_argparser_py.html  z_7feeea2cb6302655_config_py.html  z_7feeea2cb6302655_log_py.html
temp/junit/: test-results.xml
temp/reports/: performance_py3.10.txt  performance_py3.11.txt  performance_py3.8.txt  pylint-report.txt
temp/reports/html/: index.html
temp/reports/pylint/: pylint-py3.10.html  pylint-py3.11.html  pylint-py3.8.html  pylint-report-py3.11.txt
tests/: conftest.py  test_config.py  test_config_checking_priority.py  test_config_loading.py  test_config_priority.py  test_config_processing.py  test_configurations.py  test_edge_cases.py  test_edge_cases_pytest.py  test_fixtures.py  test_integration.py  test_log.py  test_log_format.py  test_log_format_isolated.py  test_mixed_concurrency.py  test_multithreading.py  test_prio.py  test_stress.py
