[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prismalog"
version = "0.1.2"
description = "High-performance colored, multi-process logging library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Alexey Obukhov", email = "alexey.obukhov@hotmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
]
keywords = ["logging", "colored", "high-performance", "multiprocessing"]

[project.optional-dependencies]
# Development tools for code quality, formatting, etc.
yaml = ["PyYAML>=6.0.1"]     # Only the YAML dependency for using yaml configs

dev = [
    "black>=22.6.0",         # Code formatting
    "pylint>=2.14.0",        # Linting
    "mypy>=1.0.0",           # Type checking
    "isort>=5.10.0",         # Import sorting
    "build>=0.8.0",          # Package building
    "twine>=4.0.0",          # Package publishing
    "flake8>=5.0.0",         # Code style checking
    "pre-commit>=3.5.0",     # Pre-commit hooks
    "PyYAML>=6.0.2",         # For YAML configuration
]

# Testing dependencies
test = [
    "pytest>=8.3.5",          # Testing framework
    "pytest-cov>=3.0.0",      # Coverage reporting for pytest
    "pytest-html>=3.2.0",     # For html generating
    "pytest-timeout>=2.1.0",  # Timeout support for tests
    "coverage>=7.6.1",        # Code coverage measurement
    "nltk>=3.9.1",            # For text analysis in tests
    "PyYAML>=6.0.2",          # For YAML configuration testing
]

# Documentation dependencies
doc = [
    "sphinx>=4.5.0",                    # Documentation generator
    "sphinx-rtd-theme>=1.0.0",          # ReadTheDocs theme
    "sphinx-autodoc-typehints>=1.18.0", # Type annotations support
    "sphinx-design>=0.5.0",             # Markdown support
]

# CI-specific dependencies that aren't included above
ci = [
    "anybadge>=1.10.0",      # For generating badges in CI
]

# All-in-one convenience installation
all = [
    "black>=22.6.0",                    # Code formatting
    "pylint>=2.14.0",                   # Linting
    "mypy>=1.0.0",                      # Type checking
    "isort>=5.10.0",                    # Import sorting
    "build>=0.8.0",                     # Package building
    "twine>=4.0.0",                     # Package publishing
    "flake8>=5.0.0",                    # Code style checking
    "pre-commit>=3.5.0",                # Pre-commit hooks
    "PyYAML>=6.0.2",                    # For YAML configuration
    "pytest>=8.3.5",                    # Testing framework
    "pytest-cov>=3.0.0",                # Coverage reporting for pytest
    "pytest-html>=3.2.0",               # For html generating
    "pytest-timeout>=2.1.0",            # Timeout support for tests
    "coverage>=7.6.1",                  # Code coverage measurement
    "nltk>=3.9.1",                      # For text analysis in tests
    "sphinx>=4.5.0",                    # Documentation generator
    "sphinx-rtd-theme>=1.0.0",          # ReadTheDocs theme
    "sphinx-autodoc-typehints>=1.18.0", # Type annotations support
    "sphinx-design>=0.5.0",             # Markdown support
    "anybadge>=1.10.0",                 # For generating badges in CI
]

[project.urls]
Homepage = "https://github.com/vertok/prismalog"
Documentation = "https://prismalog.readthedocs.io/"
Issues = "https://github.com/vertok/prismalog/issues"
Changelog = "https://github.com/vertok/prismalog/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["prismalog"]

[tool.pytest.ini_options]
# Test markers
markers = [
    "multithreading: marks tests that verify multithreading functionality",
    "concurrency: marks tests that verify mixed concurrency (processes and threads)",
    "integration: marks tests requiring external resources",
    "slow: marks tests that take longer to run"
]

# Test discovery and execution
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = ["Test*"]
python_functions = ["test_*"]

# Display
addopts = [
    "-v",                # verbose output
    "--tb=short",        # shorter traceback format
    "--strict-markers",  # raise error on unknown marks
    "-ra",               # show extra test summary info
]

# Test running options
minversion = "6.0"
required_plugins = ["pytest-timeout", "pytest-cov"]
xfail_strict = true

[tool.black]
line-length = 120
target-version = ["py38", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = []

[tool.pylint.format]
max-line-length = 120
